--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+history.txt
+code/src/DataEnrichment/history.txt
+
+
+# knowledge graph credentials
+src/.env
